Enhanced unified video streaming app + integration testing (#1147)
* Add streaming client/server demo applications and operators.

Signed-off-by: cdinea <cdinea@nvidia.com>

* Rename streaming_client_04_80 to streaming_client_enhanced

Signed-off-by: cdinea <cdinea@nvidia.com>

* Rename streaming_server_04_80_tensor to streaming_server_enhanced

Signed-off-by: cdinea <cdinea@nvidia.com>

* Fix copyright headers

Signed-off-by: cdinea <cdinea@nvidia.com>

* Fix linting issues

- Remove unused imports in Python files (os import)
- Fix f-strings without placeholders
- Replace nvstaging with nvidia in NGC registry references
- Fix spelling: delpoy → deploy
- Apply black formatting to Python files

Resolves linting errors for streaming components.

Signed-off-by: cdinea <cdinea@nvidia.com>

* Update streaming server enhanced operator

Signed-off-by: cdinea <cdinea@nvidia.com>

* Add streaming client enhanced operator and demo application

- Add streaming client enhanced operator with frame saving capabilities
- Fix CMake parse error in streaming client enhanced CMakeLists.txt
- Add streaming client demo enhanced application
- Update documentation and metadata

Signed-off-by: cdinea <cdinea@nvidia.com>

* Add streaming_server_demo_enhanced application and enhanced streaming server operators

Signed-off-by: cdinea <cdinea@nvidia.com>

* Remove legacy 04_80 streaming applications

Signed-off-by: cdinea <cdinea@nvidia.com>

* Complete removal of remaining 04_80 streaming files

Signed-off-by: cdinea <cdinea@nvidia.com>

* linting fixes for streaming enhanced components

Signed-off-by: cdinea <cdinea@nvidia.com>

* Fix metadata validation issues

Signed-off-by: cdinea <cdinea@nvidia.com>

* Fix metadata validation: remove 'Application' from names

Signed-off-by: cdinea <cdinea@nvidia.com>

* Additional linting fixes for streaming enhanced components

Signed-off-by: cdinea <cdinea@nvidia.com>

* Revert "Additional linting fixes for streaming enhanced components"

This reverts 

--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -118,6 +118,10 @@ add_holohub_application(psd_pipeline DEPENDS
                                   vita49_psd_packetizer
                                   data_writer)
 
+# Unified streaming applications
+add_holohub_application(video_streaming_demo_enhanced DEPENDS
+                        OPERATORS video_streaming)
+
 add_holohub_application(ultrasound_segmentation DEPENDS
                         OPERATORS OPTIONAL aja_source)
 
