--- a/operators/CMakeLists.txt
+++ b/operators/CMakeLists.txt
@@ -41,6 +41,8 @@ add_holohub_operator(streaming_client)
 add_holohub_operator(streaming_server)
 add_subdirectory(orsi)
 add_holohub_operator(slang_shader)
+# Unified streaming operator
+add_holohub_operator(video_streaming)
 add_holohub_operator(tensor_to_file)
 add_holohub_operator(tensor_to_video_buffer)
 add_holohub_operator(tool_tracking_postprocessor)
