App: Update object_detection_torch torchvision for sm_110 support
Update the torchvision dependency used in object_detection_torch in
order to support the Jetson AGX Thor platform

Previous pinned torchvision wheel CUDA kernels did not include support
for compute capability 11.0 (Jetson AGX Thor)

Torch and torchvision are observed to be ABI compatible, so we can
overwrite the Holoscan SDK dev container libtorch distribution with the
latest retrieved from public PyTorch

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/applications/object_detection_torch/CMakeLists.txt
+++ b/applications/object_detection_torch/CMakeLists.txt
@@ -42,6 +42,7 @@ if(holoscan_VERSION GREATER 3.5)
     PATH_SUFFIXES lib lib64
     REQUIRED
   )
+  message(STATUS "Found Torchvision: ${TORCHVISION_LIBRARY}")
   add_library(torchvision SHARED IMPORTED)
   set_target_properties(torchvision PROPERTIES
       IMPORTED_LOCATION "${TORCHVISION_LIBRARY}"
