refactor: replace video_streaming with enhanced version
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/applications/video_streaming/video_streaming_client/CMakeLists.txt
+++ b/applications/video_streaming/video_streaming_client/CMakeLists.txt
@@ -14,11 +14,10 @@
 # limitations under the License.
 
 cmake_minimum_required(VERSION 3.20)
-project(video_streaming_client LANGUAGES NONE)
+project(video_streaming_client LANGUAGES CXX)
 
 # Add C++ subdirectory
 add_subdirectory(cpp)
 
-if(HOLOHUB_BUILD_PYTHON)
-  add_subdirectory(python)
-endif()
+# Add Python subdirectory
+add_subdirectory(python)
