--- a/applications/video_streaming/video_streaming_client/cpp/streaming_client_demo.yaml
+++ b/applications/video_streaming/video_streaming_client/cpp/streaming_client_demo.yaml
@@ -25,18 +25,12 @@ extensions:
   - libgxf_std.so
   - libgxf_cuda.so
 
-source: "replayer"
+data_logging: true
+
+# Source configuration: "replayer" for video file playback, "v4l2" for camera capture
+source: "v4l2" # or "replayer"
 
 # Video replayer configuration
-video_replayer:
-  directory: "/workspace/holohub/data/endoscopy"
-  basename: "surgical_video"
-  frame_rate: 30
-  repeat: true
-  realtime: true
-  count: 0
-
-# Legacy replayer configuration (kept for compatibility)
 replayer:
   directory: "/workspace/holohub/data/endoscopy"
   basename: "surgical_video"
@@ -45,15 +39,41 @@ replayer:
   realtime: true
   count: 0
 
-# Format converter configuration for uint8 output (HoloViz compatible)
+# V4L2 camera configuration
+v4l2_source:
+  device: "/dev/video0"        # Camera device path
+  width: 640                   # Camera resolution width (widely supported)
+  height: 480                  # Camera resolution height
+  frame_rate: 30               # Camera frame rate
+  pixel_format: "YUYV"         # Pixel format (YUYV 640x480@30fps confirmed supported)
+  # Optional camera settings:
+  # exposure_time: 100         # Exposure time in multiples of 100μs (e.g. 100 = 10ms)
+  # gain: 10                   # Camera gain value
+
+# Format converter configuration - V4L2 always outputs RGBA8888 regardless of input format
 format_converter:
+  in_dtype: "rgba8888"         # V4L2 always outputs RGBA8888 (4 channels)
+  out_dtype: "rgb888"          # Convert to RGB888 (3 channels) dropping alpha
   out_tensor_name: tensor
-  out_dtype: "uint8"
+  scale_min: 0.0
+  scale_max: 255.0
+  out_channel_order: [2, 1, 0] # Convert RGB to BGR for downstream compatibility
+
+basic_console_logger:
+  log_inputs: true
+  log_outputs: true
+  log_metadata: false
+  log_tensor_data_content: true
+  allowlist_patterns: []
+  denylist_patterns: []
+
+simple_text_serializer:
+  max_elements: 500
 
 # Streaming client settings
 streaming_client:
   # Video/stream parameters
-  width: 854
+  width: 640  # Match V4L2 source resolution
   height: 480
   fps: 30
   
@@ -61,34 +81,50 @@ streaming_client:
   server_ip: "127.0.0.1"
   signaling_port: 48010  # Changed back to match server port
   
-  # Operation mode
+  # Operation mode - RE-ENABLE SENDING FOR TESTING
   receive_frames: true
-  send_frames: true
+  send_frames: true  # Re-enabled to test frame sending with safety measures
+  
+  # Frame validation (prevents sending empty frames during startup)
+  min_non_zero_bytes: 10  # Minimum non-zero bytes required to consider frame valid
   
   # Advanced options
   #timeout_ms: 5000
   #reconnect_attempts: 3
   #buffer_size: 10
 
-# Visualization options
+# Visualization options 
 visualize_frames: true
 
 # HoloViz configuration (used only if visualize_frames is true)
 holoviz:
-  # Window size and title
-  width: 854  
+  width: 640  # Match V4L2 source resolution
   height: 480
-  window_title: "Streaming Client Test - With Streaming Client (Simplified)"
-  
-  # Rendering parameters for streaming client output
-  headless: false
-  
-  # Tensor specifications for streaming client output
+  # Allocator configuration specifically for HoloViz
+  allocator:
+    block_size: 4194304  # 4MB blocks to handle BGRA frames
+    num_blocks: 8
   tensors:
-    - name: ""
+    - name: "bgra_tensor"
       type: color
+      image_format: "b8g8r8a8_unorm"  # BGRA format (4 channels) matches streaming client output
       opacity: 1.0
       priority: 0
+
+# Buffer pool configuration to fix GXF_EXCEEDING_PREALLOCATED_SIZE errors
+# Increases buffer size to accommodate BGR->BGRA conversion (921600 -> 1228800 bytes)
+allocator:
+  block_size: 4194304    # 4MB buffer blocks (much larger than 1228800 bytes needed for BGRA frames)
+  num_blocks: 12         # Increased number of pre-allocated blocks for smooth streaming
+
+# Additional buffer configuration for specific components
+double_buffer_transmitter:
+  capacity: 4            # Increase transmitter buffer capacity
+  policy: 2              # Drop oldest policy
+
+double_buffer_receiver:
+  capacity: 4            # Increase receiver buffer capacity
+  policy: 2              # Drop oldest policy
 
 # Optional scheduler configuration
 # Use one of: "default", "multi_thread", "event_based", "greedy"
