--- a/applications/video_streaming/video_streaming_server/CMakeLists.txt
+++ b/applications/video_streaming/video_streaming_server/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2022-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,11 +14,10 @@
 # limitations under the License.
 
 cmake_minimum_required(VERSION 3.20)
-project(video_streaming_server LANGUAGES NONE)
+project(video_streaming_server LANGUAGES CXX)
 
 # Add C++ subdirectory
 add_subdirectory(cpp)
 
-if(HOLOHUB_BUILD_PYTHON)
-  add_subdirectory(python)
-endif()
+# Add Python subdirectory
+add_subdirectory(python)
