--- a/applications/video_streaming/video_streaming_client/cpp/CMakeLists.txt
+++ b/applications/video_streaming/video_streaming_client/cpp/CMakeLists.txt
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 cmake_minimum_required(VERSION 3.20)
-project(streaming_client_demo_enhanced CXX)
+project(streaming_client_demo CXX)
 
 # This application is built by the parent add_holohub_application macro
 
@@ -26,11 +26,11 @@ if(NOT EXISTS "${OPERATOR_CLIENT_DIR}/libStreamingClient.so")
     message(WARNING "StreamingClient NGC binaries not found at ${OPERATOR_CLIENT_DIR}. Please download them using NGC CLI.")
 endif()
 
-add_executable(streaming_client_demo_enhanced
+add_executable(streaming_client_demo
   streaming_client_demo.cpp
 )
 
-target_link_libraries(streaming_client_demo_enhanced
+target_link_libraries(streaming_client_demo
   PRIVATE
   holoscan::core
   holoscan::ops::holoviz
@@ -44,16 +44,16 @@ target_link_libraries(streaming_client_demo_enhanced
 )
 
 # Copy wrapper script and make executable
-add_custom_command(TARGET streaming_client_demo_enhanced POST_BUILD
+add_custom_command(TARGET streaming_client_demo POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo_enhanced_wrapper.sh.in"
-        "$<TARGET_FILE_DIR:streaming_client_demo_enhanced>/streaming_client_demo_enhanced_wrapper.sh"
-    COMMAND chmod +x "$<TARGET_FILE_DIR:streaming_client_demo_enhanced>/streaming_client_demo_enhanced_wrapper.sh"
+        "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo_wrapper.sh.in"
+        "$<TARGET_FILE_DIR:streaming_client_demo>/streaming_client_demo_wrapper.sh"
+    COMMAND chmod +x "$<TARGET_FILE_DIR:streaming_client_demo>/streaming_client_demo_wrapper.sh"
     COMMENT "Installing wrapper script with LD_LIBRARY_PATH"
 )
 
 # Copy config files to multiple locations where they might be needed
-add_custom_command(TARGET streaming_client_demo_enhanced POST_BUILD
+add_custom_command(TARGET streaming_client_demo POST_BUILD
     # Copy to the binary directory
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
         "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo.yaml"
@@ -71,16 +71,16 @@ add_custom_command(TARGET streaming_client_demo_enhanced POST_BUILD
     # Copy to the target file directory
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
         "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo.yaml"
-        "$<TARGET_FILE_DIR:streaming_client_demo_enhanced>/streaming_client_demo.yaml"
+        "$<TARGET_FILE_DIR:streaming_client_demo>/streaming_client_demo.yaml"
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
         "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo_replayer.yaml"
-        "$<TARGET_FILE_DIR:streaming_client_demo_enhanced>/streaming_client_demo_replayer.yaml"
+        "$<TARGET_FILE_DIR:streaming_client_demo>/streaming_client_demo_replayer.yaml"
     COMMENT "Copying config files to all necessary locations"
 )
 
 # Set RPATH to prioritize bundled libraries over system libraries
-set_target_properties(streaming_client_demo_enhanced PROPERTIES
-    BUILD_RPATH "$<TARGET_FILE_DIR:streaming_client_demo_enhanced>/lib:$<TARGET_FILE_DIR:streaming_client_demo_enhanced>:${OPERATOR_CLIENT_DIR}"
+set_target_properties(streaming_client_demo PROPERTIES
+    BUILD_RPATH "$<TARGET_FILE_DIR:streaming_client_demo>/lib:$<TARGET_FILE_DIR:streaming_client_demo>:${OPERATOR_CLIENT_DIR}"
     INSTALL_RPATH "$ORIGIN/lib:$ORIGIN"
     BUILD_WITH_INSTALL_RPATH FALSE
     INSTALL_RPATH_USE_LINK_PATH FALSE
@@ -89,7 +89,7 @@ set_target_properties(streaming_client_demo_enhanced PROPERTIES
 
 # Install application and dependencies into the install/ directory for packaging
 install(
-  TARGETS streaming_client_demo_enhanced
+  TARGETS streaming_client_demo
   DESTINATION bin/video_streaming/cpp
 )
 
@@ -99,7 +99,7 @@ install(
 )
 
 install(
-  FILES "${CMAKE_CURRENT_BINARY_DIR}/streaming_client_demo_enhanced_wrapper.sh"
+  FILES "${CMAKE_CURRENT_BINARY_DIR}/streaming_client_demo_wrapper.sh"
   DESTINATION bin/video_streaming/cpp
   PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
 )
