--- a/applications/video_streaming/video_streaming_client/python/streaming_client_demo.yaml
+++ b/applications/video_streaming/video_streaming_client/python/streaming_client_demo.yaml
@@ -63,7 +63,7 @@ streaming_client:
 # Visualization options
 visualize_frames: true
 
-# HoloViz configuration (match camera resolution)
+# Holoviz configuration (match camera resolution)
 holoviz:
   width: 640
   height: 480
