--- a/operators/video_streaming/video_streaming_client/CMakeLists.txt
+++ b/operators/video_streaming/video_streaming_client/CMakeLists.txt
@@ -285,3 +285,8 @@ message(STATUS "StreamingClient operator configuration complete with imported ta
 if(HOLOHUB_BUILD_PYTHON)
     add_subdirectory(python)
 endif()
+
+# Add unit tests if testing is enabled
+if(BUILD_TESTING)
+    add_subdirectory(tests)
+endif()
