Add C++ unit tests for video streaming operators
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/operators/video_streaming/streaming_client_enhanced/CMakeLists.txt
+++ b/operators/video_streaming/streaming_client_enhanced/CMakeLists.txt
@@ -285,3 +285,8 @@ message(STATUS "StreamingClient operator configuration complete with imported ta
 if(HOLOHUB_BUILD_PYTHON)
     add_subdirectory(python)
 endif()
+
+# Add unit tests if testing is enabled
+if(BUILD_TESTING)
+    add_subdirectory(tests)
+endif()
