--- a/operators/video_streaming/streaming_client_enhanced/tests/CMakeLists.txt
+++ b/operators/video_streaming/streaming_client_enhanced/tests/CMakeLists.txt
@@ -19,8 +19,30 @@ if(NOT BUILD_TESTING)
   return()
 endif()
 
-# Find GTest
-find_package(GTest REQUIRED)
+# Use FetchContent to get GTest if not found
+find_package(GTest QUIET)
+
+if(NOT GTest_FOUND)
+  message(STATUS "GTest not found, fetching from GitHub...")
+  include(FetchContent)
+  FetchContent_Declare(
+    googletest
+    GIT_REPOSITORY https://github.com/google/googletest.git
+    GIT_TAG v1.14.0
+    GIT_SHALLOW TRUE
+  )
+  # For Windows: Prevent overriding the parent project's compiler/linker settings
+  set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+  FetchContent_MakeAvailable(googletest)
+  
+  # Create aliases to match find_package targets
+  if(NOT TARGET GTest::gtest)
+    add_library(GTest::gtest ALIAS gtest)
+  endif()
+  if(NOT TARGET GTest::gtest_main)
+    add_library(GTest::gtest_main ALIAS gtest_main)
+  endif()
+endif()
 
 # Add test executable
 add_executable(test_streaming_client_op
