--- a/operators/video_streaming/streaming_server_enhanced/python/CMakeLists.txt
+++ b/operators/video_streaming/streaming_server_enhanced/python/CMakeLists.txt
@@ -73,3 +73,8 @@ file(GENERATE
     OUTPUT "${HOLOHUB_PYTHON_MODULE_OUT_DIR}/streaming_server_enhanced/__init__.py"
     CONTENT "${INIT_PY_CONTENT}"
 )
+
+# Add pytest tests if testing is enabled
+if(BUILD_TESTING)
+    add_subdirectory(tests)
+endif()
