Gate Python subdirectories with HOLOHUB_BUILD_PYTHON flag
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/applications/video_streaming/video_streaming_client/CMakeLists.txt
+++ b/applications/video_streaming/video_streaming_client/CMakeLists.txt
@@ -20,4 +20,6 @@ project(video_streaming_client LANGUAGES CXX)
 add_subdirectory(cpp)
 
 # Add Python subdirectory
-add_subdirectory(python)
+if(HOLOHUB_BUILD_PYTHON)
+  add_subdirectory(python)
+endif()
