--- a/operators/video_streaming/streaming_server_enhanced/python/CMakeLists.txt
+++ b/operators/video_streaming/streaming_server_enhanced/python/CMakeLists.txt
@@ -36,7 +36,7 @@ try:
     )
 except ImportError as e:
     pybind11_hsdk_err = 'unknown base type \"holoscan::'
-    if not pybind11_hsdk_err in str(e):
+    if pybind11_hsdk_err not in str(e):
         raise e
     note = \"\"\"
 - Holoscan SDK >= 3.3.0: make sure to link your bindings against 'holoscan::pybind11'.
