refactor: remove redundant configure_file for integration test script
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/applications/video_streaming/CMakeLists.txt
+++ b/applications/video_streaming/CMakeLists.txt
@@ -52,14 +52,7 @@ add_subdirectory(video_streaming_server)
 
 # Add integration testing
 if(BUILD_TESTING)
-  # Copy integration test script
-  configure_file(
-    "${CMAKE_CURRENT_SOURCE_DIR}/integration_test.sh"
-    "${CMAKE_BINARY_DIR}/integration_test.sh"
-    COPYONLY
-  )
-
-  # Make script executable
+  # Copy integration test script and make it executable
   file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/integration_test.sh"
        DESTINATION "${CMAKE_BINARY_DIR}"
        FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
