fix: pin Holoscan SDK version to 3.5 to match metadata.json
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/applications/video_streaming/video_streaming_server/cpp/CMakeLists.txt
+++ b/applications/video_streaming/video_streaming_server/cpp/CMakeLists.txt
@@ -18,7 +18,7 @@ project(streaming_server_demo CXX)
 
 # This application is built by the parent add_holohub_application macro
 
-find_package(holoscan REQUIRED CONFIG
+find_package(holoscan 3.5 REQUIRED CONFIG
              PATHS "/opt/nvidia/holoscan" "/workspace/holoscan-sdk/install")
 
 # Find required packages
