--- a/applications/video_streaming/video_streaming_server/cpp/CMakeLists.txt
+++ b/applications/video_streaming/video_streaming_server/cpp/CMakeLists.txt
@@ -147,8 +147,9 @@ install(
 
 # Install wrapper script
 install(
-  FILES "${CMAKE_CURRENT_BINARY_DIR}/streaming_server_demo_wrapper.sh"
+  FILES "${CMAKE_CURRENT_SOURCE_DIR}/streaming_server_demo_wrapper.sh.in"
   DESTINATION bin/video_streaming_server/cpp
+  RENAME streaming_server_demo_wrapper.sh
   PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
 )
 
