fix: make Python copy targets deterministic with explicit paths
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/applications/video_streaming/video_streaming_server/python/CMakeLists.txt
+++ b/applications/video_streaming/video_streaming_server/python/CMakeLists.txt
@@ -17,10 +17,15 @@
 
 # Copy streaming_server_demo application file to both locations
 add_custom_target(python_streaming_server_demo ALL
-  COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/streaming_server_demo.py" ${CMAKE_CURRENT_BINARY_DIR}
-  COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/streaming_server_demo.py" ${CMAKE_BINARY_DIR}
-  DEPENDS "streaming_server_demo.py"
-  BYPRODUCTS "streaming_server_demo.py"
+  COMMAND ${CMAKE_COMMAND} -E copy
+          "${CMAKE_CURRENT_SOURCE_DIR}/streaming_server_demo.py"
+          "${CMAKE_CURRENT_BINARY_DIR}/streaming_server_demo.py"
+  COMMAND ${CMAKE_COMMAND} -E copy
+          "${CMAKE_CURRENT_SOURCE_DIR}/streaming_server_demo.py"
+          "${CMAKE_BINARY_DIR}/streaming_server_demo.py"
+  DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/streaming_server_demo.py"
+  BYPRODUCTS "${CMAKE_CURRENT_BINARY_DIR}/streaming_server_demo.py"
+             "${CMAKE_BINARY_DIR}/streaming_server_demo.py"
 )
 
 # Also add a specific build target that the application can depend on
