--- a/applications/video_streaming/video_streaming_client/cpp/CMakeLists.txt
+++ b/applications/video_streaming/video_streaming_client/cpp/CMakeLists.txt
@@ -53,7 +53,7 @@ target_link_libraries(streaming_client_demo
 # Copy wrapper script and make executable
 add_custom_command(TARGET streaming_client_demo POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo_wrapper.sh.in"
+        "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo_wrapper.sh"
         "$<TARGET_FILE_DIR:streaming_client_demo>/streaming_client_demo_wrapper.sh"
     COMMAND chmod +x "$<TARGET_FILE_DIR:streaming_client_demo>/streaming_client_demo_wrapper.sh"
     COMMENT "Installing wrapper script with LD_LIBRARY_PATH"
@@ -101,8 +101,7 @@ install(
 )
 
 install(
-  FILES "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo_wrapper.sh.in"
+  FILES "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo_wrapper.sh"
   DESTINATION bin/video_streaming_client/cpp
-  RENAME streaming_client_demo_wrapper.sh
   PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
 )
